# daml

./: .bazelignore  .bazelrc  .dadew  .dockerignore  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .hie-bios  .hlint.yaml  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .scalafmt.conf  .stylish-haskell.yaml  .watchmanconfig  AI_POLICY.md  BAZEL-JVM.md  BAZEL-haskell.md  BAZEL-oracle.md  BAZEL.md  BUILD  CHANGELOG  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY  DUMMY_FILE  IMPROVEMENTS.md  LATEST  LICENSE  NOTICES  NOTICES.md  PULL_REQUEST.md  Pipfile  README.md  REVIEW_GUIDELINES.md  SECURITY.md  (+84 more)
alloc-party/: AllocParty.scala  BUILD.bazel
alloc-party/resources/: logback.xml
bazel_tools/: BUILD.bazel  absl-mingw-compiler-name.patch  absl-mingw-debug.patch  absl-mingw.patch  build_environment.bzl  bundle.bzl  create_workspace.bzl  daml_ghcide_debug.patch  damlc_legacy.bzl  distribute_jar_cleanup.sh  docs.bzl  fat_cc_library.bzl  ghc-lib-no-ffi.patch  ghc_dwarf.bzl  ghci-template.sh  googleapis-status-proto.patch  grpc-bazel-mingw.patch  grpc-gettid.patch  grpc-haskell-core-ffi.patch  grpc-haskell-core-mask-runops.patch  grpc-java-plugin-visibility.patch  grpc-macos.patch  grpc-upbdefs.patch  grpc_java_visibility.patch  hackage_mirror.patch  haskell-8.10.2-bindist.patch  haskell-arm-m1.patch  haskell-arx.patch  haskell-bazel-0.25.patch  haskell-bazel-1.1.0.patch  haskell-c2hs-prefix.patch  haskell-c2hs-windows.patch  haskell-cabal-reproducible.patch  haskell-cabal-wrapper-distdir.patch  haskell-cabal-wrapper.patch  haskell-cabal.patch  haskell-cc-toolchain.patch  haskell-cc-wrapper-darwin-rpath-library-dirs.patch  haskell-cc-wrapper-globbing.patch  haskell-cc-wrapper-include-dirs.patch  (+101 more)
bazel_tools/client_server/: BUILD.bazel  client_server_build.bzl  client_server_test.bzl
bazel_tools/client_server_test/: BUILD.bazel  client_server_test.bzl
bazel_tools/dev_env_package/: dev_env_package.bzl  dev_env_package.py  dev_env_tool.bzl
bazel_tools/dev_env_tool/: BUILD.bazel  dev_env_tool.bzl
bazel_tools/docs/: BUILD.bazel
bazel_tools/ghc-lib/: BUILD.bazel  BUILD.ghc  BUILD.ghc-lib-gen  BUILD.nix-deps  README.md  defs.bzl  ghc-daml-prim.patch  ghc-hadrian.patch  ghc-lib-no-stack.patch  lib.sh  repositories.bzl  version.bzl
bazel_tools/java_testing/: BUILD.bazel  java_test_suite.bzl
bazel_tools/packaging/: BUILD.bazel  package-app.sh  packaging.bzl
bazel_tools/runfiles/: BUILD  defs.bzl
bazel_tools/scala/: BUILD.bazel
bazel_tools/scalapb/: BUILD.bazel
bazel_tools/sh/: BUILD.bazel  mktar.sh  mktgz.sh  sh.bzl  test.sh.tpl
build-inputs/: .gitignore  BUILD.bazel
canton/: .gitignore  BUILD.bazel  README.md  ref  shade_rule
canton-3x/: BUILD.bazel  canton-3x-sha
canton-3x/community/: LICENSE-open-source-bundle.txt
canton/it-lib/: BUILD.bazel
da-assistant/: BUILD.bazel  README.md  ghci.sh  ghcid.sh  package.yaml  setup.sh  stack.yaml  stack_build.py
da-assistant/apps/: Main.hs  Mockserver.hs  Test.hs
da-assistant/gen-source/: Mockserver.hs.template  Version.hs.template
da-assistant/installer/: .gitignore  README.md  SdkAssistantInstaller.wxs  build_installer.py
da-assistant/release-scripts/: make-capsule.sh  pre-to-prod-da-cli.sh  release-da-cli.sh
da-assistant/testing/: README.md  run-windows-tests.py  tests-common.sh
daml-assistant/: BUILD.bazel  daml-project-config.cabal  get-daml.sh  ghci.sh
daml-assistant/daml-helper/: BUILD.bazel  DamlHelper.hs
daml-assistant/daml-sdk/: BUILD.bazel  util.bzl  validate.sh
daml-assistant/integration-tests/: BUILD.bazel  Dockerfile  integration-test.sh  run-test.sh
daml-assistant/scala-daml-project-config/: BUILD.bazel  README.md
debug/: BUILD.bazel  Debug.scala
debug-ghci/: BUILD.bazel  Lib.hs  Main.hs  foobar.cabal
docs/: .gitignore  BUILD.bazel  README.md  canton-refs.rst  daml-intro-7.yaml  error.html  generic-templates.md  redirect_template.html  redirects.map
docs/scripts/: Pipfile  check-closing-quotes.sh  check-closing-quotes.sh.allow  check-closing-quotes.sh.whitelist  copy-assembly.sh  gen-test-evidence.sh  live-preview.sh  preview.sh  publish.sh
docs/source/: building-applications.rst  daml-off-ledger.rst  deploying.rst  high-level-intro.rst  index.rst  operating-daml.rst  tools.rst  writing-daml.rst
docs/sphinx_ext/: self_service_error_codes_extension.py
docs/theme/: .gitignore  Gruntfile.js  package-lock.json  (+1 more)
extractor/: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  UNRELEASED.md  extractor.bzl
hlint-testing/: BUILD.bazel
json-oracle-experiments/: BUILD.bazel
libs_python/: BUILD.bazel  README.md  zipbomb.py
notices-gen/: BUILD.bazel  Readme.md
release/: BUILD.bazel  RELEASE.md  RELEASE_SNAPSHOT_1.0.md  RELEASE_SNAPSHOT_2.0.md  RELEASE_STABLE_1.0.md  RELEASE_STABLE_2.0.md  artifacts.yaml  config.yaml.tmpl  ee-license.txt  install.bat  install.sh  rotation  sdk-config.yaml.tmpl  sdk.yaml  test-protobuf-structure.sh  util.bzl
rules_daml/: BUILD.bazel  daml-build.bzl  daml.bzl  generate-dar-hash.py
sdk/: .bazelignore  .bazeliskrc  .bazelrc  .dadew  .envrc  .gitignore  .hie-bios  .hlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .scalafmt.conf  .vale-ci.ini  .vale.ini  BAZEL-bash.md  BAZEL-go.md  BAZEL-haskell.md  BAZEL.md  BUILD  BUILD.bazel  CHANGELOG  COPY  Containerfile  EXTERNAL_CALL_SYNC_PLAN.md  LATEST  LICENSE  MODULE.bazel  NOTICES  NOTICES.md  PROJECTS.md  Pipfile  README.md  UNRELEASED.md  Upgrading.md  WORKSPACE  WORKSPACE.bzlmod  all-common-dependencies.json  bazel-haskell-deps.bzl  bazel-java-deps.bzl  buf-ledger-api.yaml  (+44 more)
security/: BUILD.bazel  EvidenceSecurity.hs  evidence.md  update.sh
set-env-crash/: BUILD.bazel  SetEnvCrash.hs
simple-https/: BUILD.bazel
submit-sync/: BUILD.bazel  SubmitSync.scala
templates/: BUILD.bazel  README.txt  default-gitattributes  default-gitignore  gsg-trigger.patch
test-common/: BUILD.bazel  test-common.bzl
test-evidence/: BUILD.bazel  README.md  test_evidence.bzl
xbc/: BUILD.bazel  bytecode.text  inspect-bytecode.sh
(+35296 files in other folders)
