# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Export Bazel sources for Bazel API docs.
load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "default_java_toolchain",
)

exports_files(
    [
        "haskell.bzl",
        "scala.bzl",
        "haskell-c2hs.patch",
        "haskell-static-linking.patch",
        "haskell-optp-response.patch",
        "haskell-arx.patch",
        "haskell-win-sys-includes.patch",
        "haskell-drop-fake-static.patch",
        "pom_template.xml",
    ],
    visibility = ["//:__subpackages__"],
)

# This is basically the vanilla toolchain with some tweaks to avoid warnings.
# See https://github.com/GerritCodeReview/gerrit/blob/62983448e13385756f066ba7ab73347871d74903/Documentation/dev-bazel.txt#L17-L67 and
# https://github.com/bazelbuild/bazel/issues/5723 for more information.
default_java_toolchain(
    name = "toolchain_jdk11",
    # Without this we get the following warning:
    # warning: -parameters is not supported for target value 1.7. Use 1.8 or later.
    compatible_javacopts = {"proto": [
        "-source",
        "8",
        "-target",
        "8",
    ]},
    forcibly_disable_header_compilation = True,
    javabuilder = ["@bazel_tools//tools/jdk:vanillajavabuilder"],
    jvm_opts = [],
    visibility = ["//visibility:public"],
)
